# Resolver-Recursivo-Validante

./: .gitignore  CMakeLists.txt  README.md  root.keys
src/: main.cpp  resolver
src/cli/: arguments.cpp  arguments.h  arguments.hpp
src/dns/: Relatório  Relatório.md  client.cpp  client.h  client.hpp  dns_client.cpp  dns_client.hpp  dns_command_handler.cpp  dns_command_handler.hpp  dns_mensagem.cpp  dns_mensagem.h  dns_mensagem.hpp  dns_message.cpp  dns_message.hpp  dot_client.cpp  dot_client.hpp  dot_cliente.cpp  dot_cliente.h  dot_cliente.hpp  main_test_dns.cpp  tcp_cliente.cpp  tcp_cliente.h  teste_dns  udp_cliente.cpp  udp_cliente.h
src/server/: cache_client.cpp  cache_client.hpp  cache_command_handler.cpp  cache_command_handler.hpp  cache_command_parser.cpp  cache_command_parser.hpp  cache_controller.cpp  cache_controller.hpp  cache_daemon.cpp  cache_daemon.h  cache_daemon.hpp  cache_server.cpp  cache_server.hpp  cache_store.cpp  cache_store.hpp
src/utils/: cache_types.hpp  consoleUtils.cpp  consoleUtils.hpp  stringUtils.cpp  stringUtils.hpp
tests/: CMakeLists.txt  main.cpp  main_test_dns.cpp  run_all_tests.sh  test_command_parser.cpp  test_dns_message.cpp  test_modes.sh
